--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 .flowers{
   width: 100%;
+  height: 100px;
 }
 .container1{
   display: flex;
@@ -20,10 +21,33 @@
 .title{
   font-family: 'Sacramento', cursive;
   text-align: center;
-  font-size: 80px;
+  font-size: 70px;
 }
 .subtitle{
   font-family: 'Mohave', sans-serif;
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
+}
+@media only screen and (min-width: 1024px) {
+  .flowers{
+    width: 100%;
+    height: 150px;
+  }
+  .container1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 0px;
+    
+  }
+  .title{
+    font-family: 'Sacramento', cursive;
+    text-align: center;
+    font-size: 80px;
+  }
+  .subtitle{
+    font-family: 'Mohave', sans-serif;
+    text-align: center;
+    font-size: 40px;
+  }
 }
