--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .flowers{
-  width: 100%;
+  width: 100vw;
   height: 100px;
 }
 .container1{
@@ -28,9 +28,10 @@
   text-align: center;
   font-size: 30px;
 }
+
 @media only screen and (min-width: 1024px) {
   .flowers{
-    width: 100%;
+    width: 100vw;
     height: 150px;
   }
   .container1{
