--- a/src/views/Todo/Todo.module.css
+++ b/src/views/Todo/Todo.module.css
@@ -1,12 +1,16 @@
-/* .rowcont{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    
-} */
+
 
 @import url('https://fonts.googleapis.com/css2?family=Mohave:wght@300&display=swap');
 
-
+.edit{
+    width: 300px;
+    height: 50px;
+    font-size: 25px;
+    font-family: 'Mohave', sans-serif;  
+    border: 3px solid #c98585;
+    border-radius: 5px;
+    
+ } 
 .buti{
     width: 100px;
     height: 50px;
@@ -62,4 +66,17 @@
     font-family: 'Mohave', sans-serif;
     font-weight: bold;
     font-size: 20px;
+}
+
+@media only screen and (min-width: 1024px){
+    .edit{
+        width: 400px;
+        height: 50px;
+        font-size: 25px;
+        font-family: 'Mohave', sans-serif;  
+        border: 3px solid #c98585;
+        border-radius: 5px;
+        
+     } 
+
 }
