--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,22 @@
   text-align: center;
   font-size: 70px;
 }
+
+.title_main{
+  text-align: center;
+  margin-bottom: 20px;
+  height: 55px;
+  margin-left: 10px;
+  background-color: #E393A6;
+  text-align: center;
+  padding-top: 20px;
+  color: white;
+  font-family: 'Mohave', sans-serif;
+  font-size: 23px;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
 .subtitle{
   font-family: 'Mohave', sans-serif;
   text-align: center;
