--- a/src/views/Form/Form.module.css
+++ b/src/views/Form/Form.module.css
@@ -2,14 +2,27 @@
 
 .container1 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 0px;
   
 }
 
+.button_view{
+  width: 200px;
+  height: 51px;
+  margin-top: 20px;
+  background-color: #BEACC7;
+  border-radius: 12px;
+  color: #733561;
+  font-family: 'Mohave', sans-serif;
+  font-size: 22px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
 .containertask {
-  
   display: flex;
   justify-content: center;
   
@@ -25,6 +38,7 @@
   color: white;
   font-family: 'Mohave', sans-serif;
   font-size: 23px;
+  margin-top: 20px;
 }
 .buttonadd {
   display: flex;
