--- a/src/views/Todo/Todo.module.css
+++ b/src/views/Todo/Todo.module.css
@@ -46,7 +46,7 @@
 .row1{
     margin-top: 5px;
     width: 700px;
-    background: #F7CEF8;
+    
     border-radius:10px ;
     border: solid #AE889F;
     display: flex;
@@ -67,6 +67,15 @@
     font-weight: bold;
     font-size: 20px;
 }
+/*aqui van los atributos del checkbox*/
+.check{
+    width: 50px;
+    height: 50px;
+    
+  }
+ 
+
+          
 
 @media only screen and (min-width: 1024px){
     .edit{
@@ -78,5 +87,14 @@
         border-radius: 5px;
         
      } 
+     
+     .row1_changed{
+        background-color: #9e6e9fe0;
+        color: aliceblue;
+     }
 
-}
+     .row1_normal{
+        background: #F7CEF8;
+     }
+
+}   
