--- a/src/views/Form/Form.module.css
+++ b/src/views/Form/Form.module.css
@@ -22,6 +22,13 @@
   margin-right: 10px;
 }
 
+.view_buttons{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .containertask {
   display: flex;
   justify-content: center;
