--- a/src/views/Form/Form.module.css
+++ b/src/views/Form/Form.module.css
@@ -68,9 +68,8 @@
 }
 
 .input{
-  width: 80vw;
+  width: 70vw;
   height: 70px;
-  margin-right: 415px;
   padding-left: 5px;
   margin-top: 10px;
   background: #FFFFFF;
@@ -88,11 +87,15 @@
   *{
     margin: 0%;
     box-sizing: border-box;
-    overflow: hidden;
   }
+
+  .view_buttons{
+    flex-direction: row;
+  }
+
   .add {
     width: 195px;
-    height: 51px;
+    height: 65px;
     margin-top: 20px;
     background-color: #BEACC7;
     border-radius: 12px;
